# Explore2

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  dependencies.txt  generate_VS2012_x64.bat  generate_VS2013_x64.bat  vcpkg.json
AtmosphereTest/: AtmosphereTest.cpp
Data/: Font.tga
Data/Shaders/: _template_2d.xml  _template_2d_fs.glsl  _template_2d_vs.glsl  _template_3d.xml  _template_3d_fs.glsl  _template_3d_vs.glsl  atmosphere_attenuate.xml  atmosphere_attenuate_fs.glsl  atmosphere_attenuate_vs.glsl  atmosphere_scatter.xml  atmosphere_scatter_fs.glsl  atmosphere_scatter_vs.glsl  atmosphere_utils.glsl  atmospheric.h  background.xml  background_fs.glsl  background_vs.glsl  draw_single_texture.xml  draw_single_texture_fs.glsl  draw_single_texture_vs.glsl  font.xml  font_fs.glsl  font_vs.glsl  fs.glsl  gbuffer_textures.glsl  general_shadow_fs.glsl  light_vs.glsl  lighting_utils.glsl  lod_chunk.xml  lod_chunkL0_water.xml  lod_chunkL0_water_fs.glsl  lod_chunkL0_water_vs.glsl  lod_chunk_batch.xml  lod_chunk_batch_fs.glsl  lod_chunk_batch_shadow_vs.glsl  lod_chunk_batch_vs.glsl  lod_chunk_fs.glsl  lod_chunk_shadow_vs.glsl  lod_chunk_splat_shader.xml  lod_chunk_splat_shader_fs.glsl  (+38 more)
Data/Systems/: test_system.xml
Data/Vice/: test2.xml
Data/Vice/shaders/: basic_font_shader.xml  basic_font_shader_fs.glsl
Explore2Engine/: CMakeLists.txt  atmospheric_scattering.cpp  atmospheric_scattering.h  atmospherics.cpp  atmospherics.h  chunkbatcher.h  chunkdatathread.cpp  chunkdatathread.h  chunklod.cpp  chunklod.h  commontypes.cpp  commontypes.h  databuilderthread.cpp  databuilderthread.h  engine_constants.h  errorlog.cpp  errorlog.h  gbuffer.cpp  gbuffer.h  geometries.cpp  geometries.h  heightdataprovider.cpp  heightdataprovider.h  orbit.cpp  orbit.h  planet.cpp  planet.h  planetgeometry.cpp  planetgeometry.h  player.cpp  player.h  solarsystem.cpp  solarsystem.h  sungeometry.cpp  sungeometry.h  texturearraymanager.cpp  texturearraymanager.h  textureprovider.cpp  textureprovider.h
Explore2Game/: CMakeLists.txt  Explore2.cpp  ReadMe.txt  RemoteDebugInterface.cpp  RemoteDebugInterface.h  game.rc
Explore2Remote/: CMakeLists.txt  Explore2Remote.rc  explore2remote.cpp  explore2remote.h  explore2remote.qrc  explore2remote.ui  main.cpp  remote.rc
HPCNoiseTest/: HPCNoiseTest.cpp  ReadMe.txt  stdafx.cpp
MyLibs/Effect/: shadermanager.cpp
MyLibs/GLBase/: sdlgl.hpp  texture.hpp
MyLibs/HPCNoise/: perlin.inl
MyLibs/Math/: spatialnoise.inl  sse_utils.hpp  vector4.hpp
MyLibs/Remote/: RemoteDebug.h
MyLibs/Render/: rendergl.cpp  rendergl_2.h
MyLibs/Utils/: Profiler.h
MyLibs/Vice/: CMakeLists.txt  boost_python_wrapper.h  component.cpp
ShaderToInline/: ReadMe.txt  ShaderToInline.cpp  stdafx.cpp
SourceData/UI/mainmenu/: mainmenu.an  mainmenu.html  mainmenu_edge.js  mainmenu_edgeActions.js  mainmenu_edgePreload.js  menu_data.json
SourceData/UI/test/: test.an  test.html  test_edge.js  test_edgeActions.js  test_edgePreload.js
SourceData/UI/test2/: test2.an  test2.html  test2_edge.js  test2_edgeActions.js  test2_edgePreload.js
SourceData/UI/wrapper/: wrapper.html
Test/: Test.cpp
Tools/: ShaderToInline.bsc
testapp1/: main.cpp  testapp1.cpp  testapp1.h  testapp1.qrc  testapp1.ui
